obolup/manifests/expose-agent.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expose-agent
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: obol.stack
      http:
        paths:
          - path: /agent(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: obol-agent
                port:
                  number: 8000
