obolup/manifests/expose-erpc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expose-erpc
  namespace: l1
spec:
  ingressClassName: nginx
  rules:
    - host: obol.stack
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: rpc
                port:
                  number: 80
            path: /
